--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webshooter-server",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Multiplayer Shooter - Dedicated Server",
   "main": "main.js",
   "dependencies": {
@@ -21,5 +21,5 @@
     "Socket"
   ],
   "author": "Paul-Ver (https://github.com/Paul-Ver)",
-  "license": "CC-BY-NC-ND-4.0"
+  "license": "CC-BY-NC-SA-4.0"
 }
